--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0622.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0622.html
@@ -108,9 +108,14 @@
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1553 209 1630 264">
+        <span id="w_18_0" class="ocr_word" title="bbox 1553 209 1630 264">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τὸ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_18_1" class="ocr_word" title="bbox 1553 209 1630 264">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_19" class="ocr_word" title="bbox 1662 211 1806 250" lang="grc">
@@ -126,11 +131,6 @@
         <span id="w_21" class="ocr_word" title="bbox 1912 223 1954 247" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
-          </span>
-        </span>
-        <span id="w_22" class="ocr_word" title="bbox 1977 220 2059 247" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σύνθετον.</ins>
           </span>
         </span>
       </span>
@@ -423,19 +423,9 @@
             <ins title="nlp 2.00">‘Σωχράτης</ins>
           </span>
         </span>
-        <span id="w_82" class="ocr_word" title="bbox 1634 549 1713 605">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003E;</ins>
-          </span>
-        </span>
-        <span id="w_83" class="ocr_word" title="bbox 1735 548 1916 605" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">βαδίζει’·</ins>
-          </span>
-        </span>
         <span id="w_84" class="ocr_word" title="bbox 1945 562 2064 588" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003E; βαδίζει᾿· ταῦτα</ins>
           </span>
         </span>
       </span>
@@ -693,9 +683,14 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_135" class="ocr_word" title="bbox 1157 894 1224 950">
+        <span id="w_135_0" class="ocr_word" title="bbox 1157 894 1224 950">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;εἰ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_135_1" class="ocr_word" title="bbox 1157 894 1224 950">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 1246 911 1284 935" lang="grc">
@@ -726,11 +721,6 @@
         <span id="w_141" class="ocr_word" title="bbox 1964 890 1983 930" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_142" class="ocr_word" title="bbox 2006 892 2065 930" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λόγος</ins>
           </span>
         </span>
       </span>
@@ -2197,19 +2187,9 @@
             <ins class="alt" title="nlp 1.00">7.8</ins>
           </span>
         </span>
-        <span id="w_434" class="ocr_word" title="bbox 731 2706 752 2738" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_435_0" class="ocr_word" title="bbox 769 2712 803 2717">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">—</ins>
-          </span>
-        </span>
         <span id="w_435_1" class="ocr_word" title="bbox 769 2712 803 2717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">συγκειμένη</ins>
+            <ins class="alt" title="nlp 2.00">ἡ—συγκειμένη</ins>
           </span>
         </span>
         <span id="w_436" class="ocr_word" title="bbox 1034 2691 1175 2735">
@@ -2218,14 +2198,14 @@
             <del title="nlp 0.90">scripsi:</del>
           </span>
         </span>
-        <span id="w_437" class="ocr_word" title="bbox 1202 2690 1223 2734" lang="grc">
+        <span id="w_438_0" class="ocr_word" title="bbox 1238 2709 1279 2712">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins class="alt" title="nlp 2.00">ἠ—συγκείμενον</ins>
           </span>
         </span>
-        <span id="w_438" class="ocr_word" title="bbox 1238 2709 1279 2712" lang="grc">
+        <span id="w_438_1" class="ocr_word" title="bbox 1238 2709 1279 2712">
           <span class="alternatives">
-            <ins title="nlp 2.00">συγκείμενον</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_439" class="ocr_word" title="bbox 1526 2687 1552 2720">
@@ -2253,11 +2233,6 @@
         <span id="w_443" class="ocr_word" title="bbox 2023 2682 2063 2715">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">14</ins>
-          </span>
-        </span>
-        <span id="w_444" class="ocr_word" title="bbox 2088 2679 2151 2714" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπὸ</ins>
           </span>
         </span>
       </span>
@@ -2333,9 +2308,9 @@
             <del title="nlp 0.90">lacunam</del>
           </span>
         </span>
-        <span id="w_458" class="ocr_word" title="bbox 2064 2738 2152 2772">
+        <span id="w_458_0" class="ocr_word" title="bbox 2064 2738 2152 2772">
           <span class="alternatives">
-            <ins title="nlp 2.00">indicani :</ins>
+            <ins class="alt" title="nlp 2.00">indicavi:</ins>
           </span>
         </span>
       </span>
@@ -2385,7 +2360,7 @@
         </span>
         <span id="w_468" class="ocr_word" title="bbox 1276 2818 1296 2851" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_469" class="ocr_word" title="bbox 1316 2804 1332 2838" lang="grc">
@@ -2405,7 +2380,7 @@
         </span>
         <span id="w_472" class="ocr_word" title="bbox 1548 2815 1568 2847" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_473" class="ocr_word" title="bbox 1596 2801 1612 2835" lang="grc">
@@ -2468,8 +2443,7 @@
         </span>
         <span id="w_485" class="ocr_word" title="bbox 1330 2862 1371 2896">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">of.</ins>
-            <del title="nlp 0.90">of.</del>
+            <ins title="nlp 2.00">cf.</ins>
           </span>
         </span>
         <span id="w_486" class="ocr_word" title="bbox 1398 2872 1428 2894">
@@ -2536,7 +2510,7 @@
         </span>
         <span id="w_497" class="ocr_word" title="bbox 1038 2936 1059 2969" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_498" class="ocr_word" title="bbox 1085 2923 1303 2968" lang="grc">
@@ -2557,7 +2531,7 @@
         </span>
         <span id="w_501" class="ocr_word" title="bbox 1756 2929 1778 2962" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἡ</ins>
+            <ins title="nlp 2.00">ἢ</ins>
           </span>
         </span>
         <span id="w_502" class="ocr_word" title="bbox 1804 2916 2010 2960" lang="grc">
@@ -2740,14 +2714,12 @@
         </span>
         <span id="w_534" class="ocr_word" title="bbox 844 3101 911 3134">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">hue</ins>
-            <del title="nlp 0.90">hue</del>
+            <ins title="nlp 2.00">huc</ins>
           </span>
         </span>
         <span id="w_535" class="ocr_word" title="bbox 936 3099 1098 3133">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">inlatum:</ins>
-            <del title="nlp 0.90">inlatum:</del>
+            <ins title="nlp 2.00">inlatum;</ins>
           </span>
         </span>
         <span id="w_536" class="ocr_word" title="bbox 1127 3108 1213 3142">
