--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0598.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0598.html
@@ -29,9 +29,14 @@
             <del title="nlp 0.90">ticis</del>
           </span>
         </span>
-        <span id="w_3" class="ocr_word" title="bbox 458 206 719 261">
+        <span id="w_3_0" class="ocr_word" title="bbox 458 206 719 261">
           <span class="alternatives">
-            <ins title="nlp 2.00">Stephannm</ins>
+            <ins class="alt" title="nlp 2.00">Stephanum</ins>
+          </span>
+        </span>
+        <span id="w_3_1" class="ocr_word" title="bbox 458 206 719 261">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_4" class="ocr_word" title="bbox 759 216 931 257">
@@ -39,9 +44,14 @@
             <ins title="nlp 2.00">operam</ins>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 978 213 1140 242">
+        <span id="w_5_0" class="ocr_word" title="bbox 978 213 1140 242">
           <span class="alternatives">
-            <ins title="nlp 2.00">nanare</ins>
+            <ins class="alt" title="nlp 2.00">navare</ins>
+          </span>
+        </span>
+        <span id="w_5_1" class="ocr_word" title="bbox 978 213 1140 242">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1179 198 1367 241">
@@ -65,16 +75,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">p.</ins>
             <del title="nlp 0.90">p.</del>
-          </span>
-        </span>
-        <span id="w_10" class="ocr_word" title="bbox 1834 193 1964 246">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30,17</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 2003 192 2134 245">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">45,24</ins>
           </span>
         </span>
       </span>
@@ -198,8 +198,7 @@
         </span>
         <span id="w_34" class="ocr_word" title="bbox 905 445 992 481">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">turn</ins>
-            <del title="nlp 0.90">turn</del>
+            <ins title="nlp 2.00">tum</ins>
           </span>
         </span>
         <span id="w_35" class="ocr_word" title="bbox 1025 436 1309 481">
@@ -284,9 +283,14 @@
             <del title="nlp 0.90">et</del>
           </span>
         </span>
-        <span id="w_50" class="ocr_word" title="bbox 662 599 916 654">
+        <span id="w_50_0" class="ocr_word" title="bbox 662 599 916 654">
           <span class="alternatives">
-            <ins title="nlp 2.00">Elenchos’;</ins>
+            <ins class="alt" title="nlp 2.00">Elenchos’;</ins>
+          </span>
+        </span>
+        <span id="w_50_1" class="ocr_word" title="bbox 662 599 916 654">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_51" class="ocr_word" title="bbox 947 597 998 640">
@@ -341,12 +345,6 @@
             <ins title="nlp 2.00">fonds</ins>
           </span>
         </span>
-        <span id="w_60" class="ocr_word" title="bbox 2051 604 2142 645">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">grec</ins>
-            <del title="nlp 0.90">grec</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 331 669 2142 732">
         <span id="w_61" class="ocr_word" title="bbox 331 688 378 727">
@@ -355,9 +353,14 @@
             <del title="nlp 0.90">de</del>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 405 684 628 726">
+        <span id="w_62_0" class="ocr_word" title="bbox 405 684 628 726">
           <span class="alternatives">
-            <ins title="nlp 2.00">i’Escurial</ins>
+            <ins class="alt" title="nlp 2.00">l’</ins>
+          </span>
+        </span>
+        <span id="w_62_1" class="ocr_word" title="bbox 405 684 628 726">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Escurial</ins>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 658 681 791 724">
@@ -562,9 +565,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_99" class="ocr_word" title="bbox 1027 915 1047 973" lang="grc">
+        <span id="w_99_0" class="ocr_word" title="bbox 1027 915 1047 973">
           <span class="alternatives">
-            <ins title="nlp 2.00">β&amp;#x772;</ins>
+            <ins class="alt" title="nlp 2.00">β&amp;#x772;</ins>
+          </span>
+        </span>
+        <span id="w_99_1" class="ocr_word" title="bbox 1027 915 1047 973">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_100" class="ocr_word" title="bbox 1075 933 1151 957" lang="grc">
@@ -592,14 +600,9 @@
             <ins title="nlp 2.00">[K.</ins>
           </span>
         </span>
-        <span id="w_105" class="ocr_word" title="bbox 1924 909 1975 952" lang="grc">
+        <span id="w_105_0" class="ocr_word" title="bbox 1924 909 1975 952">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κ.</ins>
-          </span>
-        </span>
-        <span id="w_106" class="ocr_word" title="bbox 1995 910 2146 951">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Müller</ins>
+            <ins class="alt" title="nlp 2.00">K.</ins>
           </span>
         </span>
       </span>
@@ -615,9 +618,14 @@
             <ins title="nlp 2.00">Centralblatt</ins>
           </span>
         </span>
-        <span id="w_109" class="ocr_word" title="bbox 699 1001 782 1055">
+        <span id="w_109_0" class="ocr_word" title="bbox 699 1001 782 1055">
           <span class="alternatives">
-            <ins title="nlp 2.00">fṽr</ins>
+            <ins class="alt" title="nlp 2.00">für</ins>
+          </span>
+        </span>
+        <span id="w_109_1" class="ocr_word" title="bbox 699 1001 782 1055">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 813 997 1185 1039">
@@ -650,11 +658,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Piccolomini</ins>
             <del title="nlp 0.90">Piccolomini</del>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 1985 989 2146 1030">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Rivista</ins>
           </span>
         </span>
       </span>
@@ -1072,8 +1075,7 @@
       <span class="ocr_line" title="bbox 459 1706 2155 1774">
         <span id="w_191" class="ocr_word" title="bbox 459 1718 667 1774">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stepbani</ins>
-            <del title="nlp 0.90">Stepbani</del>
+            <ins title="nlp 2.00">Stephani</ins>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 699 1717 825 1770">
@@ -1212,8 +1214,7 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1295 1872 1542 1926">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">diligeutius</ins>
-            <del title="nlp 0.90">diligeutius</del>
+            <ins title="nlp 2.00">diligentius</ins>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 1573 1876 1616 1913">
@@ -1347,8 +1348,7 @@
         </span>
         <span id="w_237" class="ocr_word" title="bbox 2073 2032 2159 2068">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">turn</ins>
-            <del title="nlp 0.90">turn</del>
+            <ins title="nlp 2.00">tum</ins>
           </span>
         </span>
       </span>
@@ -1507,8 +1507,7 @@
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1404 2272 1578 2314">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">exbibet</ins>
-            <del title="nlp 0.90">exbibet</del>
+            <ins title="nlp 2.00">exhibet</ins>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1618 2296 1671 2300">
@@ -1774,21 +1773,20 @@
             <ins class="alt" title="nlp 1.00">ἐστι</ins>
           </span>
         </span>
-        <span id="w_313" class="ocr_word" title="bbox 1624 2591 1704 2631">
+        <span id="w_313_0" class="ocr_word" title="bbox 1624 2591 1704 2631">
           <span class="alternatives">
-            <ins title="nlp 2.00">v10</ins>
+            <ins class="alt" title="nlp 2.00">b10</ins>
+          </span>
+        </span>
+        <span id="w_313_1" class="ocr_word" title="bbox 1624 2591 1704 2631">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1741 2593 1912 2642">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">praeter</ins>
             <del title="nlp 0.90">praeter</del>
-          </span>
-        </span>
-        <span id="w_315" class="ocr_word" title="bbox 1948 2587 2165 2639">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">vulgatam</ins>
-            <del title="nlp 0.90">vulgatam</del>
           </span>
         </span>
       </span>
@@ -1861,9 +1859,14 @@
             <ins class="alt" title="nlp 1.00">νοῆσαι</ins>
           </span>
         </span>
-        <span id="w_330" class="ocr_word" title="bbox 590 2760 679 2799">
+        <span id="w_330_0" class="ocr_word" title="bbox 590 2760 679 2799">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">17"11.</ins>
+            <ins class="alt" title="nlp 2.00">17a11.</ins>
+          </span>
+        </span>
+        <span id="w_330_1" class="ocr_word" title="bbox 590 2760 679 2799">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_331" class="ocr_word" title="bbox 696 2757 747 2798">
@@ -1926,11 +1929,6 @@
             <ins class="alt" title="nlp 1.00">ἐπειδὴ</ins>
           </span>
         </span>
-        <span id="w_343" class="ocr_word" title="bbox 2118 2744 2168 2785">
-          <span class="alternatives">
-            <ins title="nlp 2.00">b3</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 359 2824 2169 2891">
         <span id="w_344" class="ocr_word" title="bbox 359 2854 424 2879" lang="grc">
@@ -1954,9 +1952,14 @@
             <ins title="nlp 2.00">κατηγορηθήσεται</ins>
           </span>
         </span>
-        <span id="w_348" class="ocr_word" title="bbox 1073 2831 1210 2872">
+        <span id="w_348_0" class="ocr_word" title="bbox 1073 2831 1210 2872">
           <span class="alternatives">
-            <ins title="nlp 2.00">18"18</ins>
+            <ins class="alt" title="nlp 2.00">18a18</ins>
+          </span>
+        </span>
+        <span id="w_348_1" class="ocr_word" title="bbox 1073 2831 1210 2872">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_349" class="ocr_word" title="bbox 1242 2846 1310 2871" lang="grc">
@@ -1989,12 +1992,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">forte</ins>
             <del title="nlp 0.90">forte</del>
-          </span>
-        </span>
-        <span id="w_355" class="ocr_word" title="bbox 2037 2824 2169 2866">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">verba</ins>
-            <del title="nlp 0.90">verba</del>
           </span>
         </span>
       </span>
@@ -2050,14 +2047,14 @@
             <ins class="alt" title="nlp 2.00">βαδίζειν</ins>
           </span>
         </span>
-        <span id="w_365_1" class="ocr_word" title="bbox 1827 2909 1990 2963">
+        <span id="w_365_1_0" class="ocr_word" title="bbox 1827 2909 1990 2963">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">α25</ins>
+            <ins class="alt" title="nlp 2.00">a25</ins>
           </span>
         </span>
-        <span id="w_366" class="ocr_word" title="bbox 2130 2918 2170 2957">
+        <span id="w_365_1_1" class="ocr_word" title="bbox 1827 2909 1990 2963">
           <span class="alternatives">
-            <ins title="nlp 2.00">γε</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2143,9 +2140,14 @@
             <ins class="alt" title="nlp 1.00">πρόσθεσις</ins>
           </span>
         </span>
-        <span id="w_382" class="ocr_word" title="bbox 589 3078 642 3119">
+        <span id="w_382_0" class="ocr_word" title="bbox 589 3078 642 3119">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">22α38</ins>
+            <ins class="alt" title="nlp 2.00">22a38</ins>
+          </span>
+        </span>
+        <span id="w_382_1" class="ocr_word" title="bbox 589 3078 642 3119">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_384" class="ocr_word" title="bbox 758 3089 921 3130" lang="grc">
@@ -2199,12 +2201,6 @@
             <ins class="alt" title="nlp 1.00">ἀληθεῖς.</ins>
           </span>
         </span>
-        <span id="w_395" class="ocr_word" title="bbox 2089 3062 2172 3105">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Ubi</ins>
-            <del title="nlp 0.90">Ubi</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 361 3143 2171 3207">
         <span id="w_396" class="ocr_word" title="bbox 361 3158 550 3200">
@@ -2239,8 +2235,7 @@
         </span>
         <span id="w_401" class="ocr_word" title="bbox 1165 3151 1408 3207">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Stepbanus</ins>
-            <del title="nlp 0.90">Stepbanus</del>
+            <ins title="nlp 2.00">Stephanus</ins>
           </span>
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1425 3151 1676 3207">
