--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0680.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0680.html
@@ -35,8 +35,7 @@
         </span>
         <span id="w_4" class="ocr_word" title="bbox 1131 103 1185 136">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">DK</ins>
-            <del title="nlp 0.90">DK</del>
+            <ins title="nlp 2.00">DE</ins>
           </span>
         </span>
         <span id="w_5" class="ocr_word" title="bbox 1215 102 1645 137">
@@ -86,29 +85,29 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 312 740 2000 797">
-        <span id="w_13" class="ocr_word" title="bbox 312 757 331 787">
+        <span id="w_13_0" class="ocr_word" title="bbox 312 757 331 787">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">5</ins>
+            <ins class="alt" title="nlp 2.00">5</ins>
           </span>
         </span>
-        <span id="w_14" class="ocr_word" title="bbox 387 740 703 797" lang="grc">
+        <span id="w_13_1" class="ocr_word" title="bbox 312 757 331 787">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Καταφάσεις·</ins>
+            <ins class="alt" title="nlp 2.00">Καταφάσεις·</ins>
+          </span>
+        </span>
+        <span id="w_14_0" class="ocr_word" title="bbox 387 740 703 797">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ὑποκείμενος</ins>
+          </span>
+        </span>
+        <span id="w_14_1" class="ocr_word" title="bbox 387 740 703 797">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὡρισμένος&amp;#x003E;</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 738 756 1050 782" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποκείμενος</ins>
-          </span>
-        </span>
-        <span id="w_16" class="ocr_word" title="bbox 1079 740 1375 795" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C; ὠρισμένος &amp;#x003E;</ins>
-          </span>
-        </span>
-        <span id="w_17" class="ocr_word" title="bbox 1407 757 1452 781" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀόριστοι.</ins>
+            <ins title="nlp 2.00">αἱ κατηγορίαι ἀόριστοι.</ins>
           </span>
         </span>
       </span>
@@ -125,9 +124,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 361 950 440 980">
-        <span id="w_20" class="ocr_word" title="bbox 361 950 440 980" lang="grc">
+        <span id="w_20_0" class="ocr_word" title="bbox 361 950 440 980">
           <span class="alternatives">
-            <ins title="nlp 2.00">Σω(??)</ins>
+            <ins class="alt" title="nlp 2.00">Σων</ins>
           </span>
         </span>
       </span>
@@ -332,7 +331,7 @@
       <span class="ocr_line" title="bbox 297 1158 2008 1210">
         <span id="w_57" class="ocr_word" title="bbox 297 1168 334 1198" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">10 πᾶς ἄνθρωπος</ins>
+            <ins title="nlp 2.00">πᾶς ἄνθρωπος</ins>
           </span>
         </span>
         <span id="w_58" class="ocr_word" title="bbox 710 1178 763 1181">
@@ -716,17 +715,32 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 290 2183 1996 2237">
-        <span id="w_125" class="ocr_word" title="bbox 290 2198 333 2227" lang="grc">
+        <span id="w_125_0" class="ocr_word" title="bbox 290 2198 333 2227">
           <span class="alternatives">
-            <ins title="nlp 2.00">20 πᾶς οὐκ ἄνθρωπος</ins>
+            <ins class="alt" title="nlp 2.00">20</ins>
           </span>
         </span>
-        <span id="w_126_0" class="ocr_word" title="bbox 992 2206 1046 2210">
+        <span id="w_125_1" class="ocr_word" title="bbox 290 2198 333 2227">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">πᾶς</ins>
+          </span>
+        </span>
+        <span id="w_126_0_0" class="ocr_word" title="bbox 992 2206 1046 2210">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_126_0_1" class="ocr_word" title="bbox 992 2206 1046 2210">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ἄνθρωπος</ins>
+          </span>
+        </span>
+        <span id="w_126_1_0" class="ocr_word" title="bbox 992 2206 1046 2210">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">—</ins>
           </span>
         </span>
-        <span id="w_126_1" class="ocr_word" title="bbox 992 2206 1046 2210">
+        <span id="w_126_1_1" class="ocr_word" title="bbox 992 2206 1046 2210">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">—</ins>
           </span>
@@ -985,8 +999,7 @@
         </span>
         <span id="w_173" class="ocr_word" title="bbox 1936 2916 2092 2957">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">efficitiir,</ins>
-            <del title="nlp 0.90">efficitiir,</del>
+            <ins title="nlp 2.00">efficitur,</ins>
           </span>
         </span>
       </span>
@@ -1040,8 +1053,7 @@
         </span>
         <span id="w_183" class="ocr_word" title="bbox 1352 2979 1500 3013">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Dltiraus</ins>
-            <del title="nlp 0.90">Dltiraus</del>
+            <ins title="nlp 2.00">Ultimus</ins>
           </span>
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1524 2986 1644 3010">
@@ -1058,29 +1070,16 @@
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1884 2985 1988 3008">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">mauu</ins>
-            <del title="nlp 0.90">mauu</del>
+            <ins title="nlp 2.00">manu</ins>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 2014 2974 2092 3007">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sub-</ins>
+            <ins title="nlp 2.00">subscriptus.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 290 3034 2092 3080">
-        <span id="w_188" class="ocr_word" title="bbox 290 3037 379 3080">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scrip</ins>
-            <del title="nlp 0.90">subscrip</del>
-          </span>
-        </span>
-        <span id="w_189" class="ocr_word" title="bbox 383 3040 450 3070">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">tus.</ins>
-            <del title="nlp 0.90">tus.</del>
-          </span>
-        </span>
         <span id="w_190" class="ocr_word" title="bbox 496 3050 524 3069" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὢ</ins>
@@ -1088,14 +1087,12 @@
         </span>
         <span id="w_191" class="ocr_word" title="bbox 549 3047 711 3070">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">numenis</ins>
-            <del title="nlp 0.90">numenis</del>
+            <ins title="nlp 2.00">numerus</ins>
           </span>
         </span>
         <span id="w_192" class="ocr_word" title="bbox 737 3037 774 3070">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iu</ins>
-            <del title="nlp 0.90">iu</del>
+            <ins title="nlp 2.00">in</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 798 3037 918 3080">
@@ -1141,23 +1138,16 @@
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1783 3034 1950 3078">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">pingiiius</ins>
-            <del title="nlp 0.90">pingiiius</del>
+            <ins title="nlp 2.00">pinguius</ins>
           </span>
         </span>
         <span id="w_201" class="ocr_word" title="bbox 1976 3042 2092 3076">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">super-</ins>
+            <ins title="nlp 2.00">superscripti;</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 290 3095 771 3140">
-        <span id="w_202" class="ocr_word" title="bbox 290 3095 424 3138">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">scripti:</ins>
-            <del title="nlp 0.90">superscripti:</del>
-          </span>
-        </span>
         <span id="w_203" class="ocr_word" title="bbox 450 3097 514 3129">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">sub</ins>
