--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0538.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0538.html
@@ -375,7 +375,7 @@
         </span>
         <span id="w_70" class="ocr_word" title="bbox 1929 480 1996 534" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὰ</ins>
+            <ins title="nlp 2.00">(τὰ</ins>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 2019 496 2090 535" lang="grc">
@@ -623,7 +623,7 @@
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1825 757 1999 811" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πάντως</ins>
+            <ins title="nlp 2.00">(πάντως</ins>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 2020 773 2093 812" lang="grc">
@@ -797,9 +797,9 @@
             <ins class="alt" title="nlp 1.00">συστατικαὶ</ins>
           </span>
         </span>
-        <span id="w_152" class="ocr_word" title="bbox 1875 966 2092 1006" lang="grc">
+        <span id="w_152_0" class="ocr_word" title="bbox 1875 966 2092 1006">
           <span class="alternatives">
-            <ins title="nlp 2.00">καθολικώτεραί</ins>
+            <ins class="alt" title="nlp 2.00">καθολικώτεραί</ins>
           </span>
         </span>
       </span>
@@ -849,9 +849,9 @@
             <ins class="alt" title="nlp 1.00">συστατικαὶ</ins>
           </span>
         </span>
-        <span id="w_163" class="ocr_word" title="bbox 1879 1035 2093 1076" lang="grc">
+        <span id="w_163_0" class="ocr_word" title="bbox 1879 1035 2093 1076">
           <span class="alternatives">
-            <ins title="nlp 2.00">καθολικώτεραί</ins>
+            <ins class="alt" title="nlp 2.00">καθολικώτεραί</ins>
           </span>
         </span>
       </span>
@@ -1027,7 +1027,7 @@
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1796 1242 1874 1298" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ]</ins>
+            <ins title="nlp 2.00">[δὲ]</ins>
           </span>
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1907 1259 2000 1284" lang="grc">
@@ -1149,9 +1149,9 @@
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 2004 1397 2093 1422" lang="grc">
+        <span id="w_222_0" class="ocr_word" title="bbox 2004 1397 2093 1422">
           <span class="alternatives">
-            <ins title="nlp 2.00">διαιρεῖν</ins>
+            <ins class="alt" title="nlp 2.00">διαιρεῖν</ins>
           </span>
         </span>
       </span>
@@ -1952,20 +1952,20 @@
             <ins title="nlp 2.00">T</ins>
           </span>
         </span>
-        <span id="w_381" class="ocr_word" title="bbox 1541 2492 1686 2537" lang="grc">
+        <span id="w_381_0" class="ocr_word" title="bbox 1541 2492 1686 2537">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὤφειλον--συστατικαί</ins>
+            <ins class="alt" title="nlp 2.00">ὤφειλον—συστατικαί</ins>
+          </span>
+        </span>
+        <span id="w_381_1" class="ocr_word" title="bbox 1541 2492 1686 2537">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_382" class="ocr_word" title="bbox 1957 2505 2022 2527">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">om.</ins>
             <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_383" class="ocr_word" title="bbox 2051 2494 2080 2527" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κ</ins>
           </span>
         </span>
       </span>
@@ -2002,12 +2002,7 @@
         </span>
         <span id="w_390_0" class="ocr_word" title="bbox 918 2552 980 2585">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V2</ins>
-          </span>
-        </span>
-        <span id="w_390_1" class="ocr_word" title="bbox 918 2552 980 2585">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">V2:</ins>
           </span>
         </span>
         <span id="w_391" class="ocr_word" title="bbox 1008 2552 1089 2585" lang="grc">
@@ -2032,12 +2027,7 @@
         </span>
         <span id="w_395_0" class="ocr_word" title="bbox 1479 2552 1539 2585">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V1</ins>
-          </span>
-        </span>
-        <span id="w_395_1" class="ocr_word" title="bbox 1479 2552 1539 2585">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">V1:</ins>
           </span>
         </span>
         <span id="w_396" class="ocr_word" title="bbox 1567 2564 1702 2589" lang="grc">
@@ -2148,12 +2138,7 @@
         </span>
         <span id="w_416_0" class="ocr_word" title="bbox 2102 2611 2166 2643">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">V2</ins>
-          </span>
-        </span>
-        <span id="w_416_1" class="ocr_word" title="bbox 2102 2611 2166 2643">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">:</ins>
+            <ins class="alt" title="nlp 2.00">V2:</ins>
           </span>
         </span>
       </span>
@@ -2423,12 +2408,7 @@
         </span>
         <span id="w_466" class="ocr_word" title="bbox 1153 2847 1280 2890">
           <span class="alternatives">
-            <ins title="nlp 2.00">scripsi</ins>
-          </span>
-        </span>
-        <span id="w_467" class="ocr_word" title="bbox 1291 2860 1298 2879">
-          <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">scripsi:</ins>
           </span>
         </span>
         <span id="w_468" class="ocr_word" title="bbox 1332 2857 1381 2879" lang="grc">
