--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0539.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0539.html
@@ -290,7 +290,7 @@
         </span>
         <span id="w_53" class="ocr_word" title="bbox 1837 405 1925 439">
           <span class="alternatives">
-            <ins title="nlp 2.00">202ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -521,9 +521,14 @@
             <ins class="alt" title="nlp 1.00">συστατικαὶ</ins>
           </span>
         </span>
-        <span id="w_98" class="ocr_word" title="bbox 1432 678 1517 733">
+        <span id="w_98_0" class="ocr_word" title="bbox 1432 678 1517 733">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τῆς</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῆς</ins>
+          </span>
+        </span>
+        <span id="w_98_1" class="ocr_word" title="bbox 1432 678 1517 733">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1554 677 1596 717" lang="grc">
@@ -534,11 +539,6 @@
         <span id="w_100" class="ocr_word" title="bbox 1636 677 1786 730" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φθορᾶς</ins>
-          </span>
-        </span>
-        <span id="w_101" class="ocr_word" title="bbox 1826 691 1867 715" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
       </span>
@@ -553,9 +553,14 @@
             <ins class="alt" title="nlp 1.00">αἱ</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 526 750 767 806" lang="grc">
+        <span id="w_104_0" class="ocr_word" title="bbox 526 750 767 806">
           <span class="alternatives">
-            <ins title="nlp 2.00">συστατικαὶ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">συστατικαὶ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_104_1" class="ocr_word" title="bbox 526 750 767 806">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 799 750 1119 804" lang="grc">
@@ -576,11 +581,6 @@
         <span id="w_108" class="ocr_word" title="bbox 1496 749 1732 801" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διαιρετικῶν</ins>
-          </span>
-        </span>
-        <span id="w_109" class="ocr_word" title="bbox 1756 744 1867 784" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">καθεστήκασι.</ins>
           </span>
         </span>
       </span>
@@ -771,16 +771,11 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1719 951 1868 1004" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνθρω-</ins>
+            <ins title="nlp 2.00">ἄνθρωπος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 190 1021 1867 1083">
-        <span id="w_148" class="ocr_word" title="bbox 190 1046 259 1071" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πος</ins>
-          </span>
-        </span>
         <span id="w_149" class="ocr_word" title="bbox 298 1033 399 1076" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ζῷον</ins>
@@ -1342,16 +1337,11 @@
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1803 2240 1878 2280" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἰσο-</ins>
+            <ins title="nlp 2.00">ἰσοδυναμεῖ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 198 2309 1878 2376">
-        <span id="w_255" class="ocr_word" title="bbox 198 2327 357 2376" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δυναμεῖ</ins>
-          </span>
-        </span>
         <span id="w_256" class="ocr_word" title="bbox 389 2338 457 2363" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τινι</ins>
@@ -1404,7 +1394,7 @@
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1727 2309 1878 2364" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄνθρω-</ins>
+            <ins title="nlp 2.00">ἄνθρωπον</ins>
           </span>
         </span>
       </span>
