--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0624.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0624.html
@@ -381,16 +381,11 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 2005 725 2055 750" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δι-</ins>
+            <ins title="nlp 2.00">διδάσκειν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 389 779 2055 835">
-        <span id="w_69" class="ocr_word" title="bbox 389 789 540 828" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δάσκειν</ins>
-          </span>
-        </span>
         <span id="w_70" class="ocr_word" title="bbox 577 800 640 825" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -728,9 +723,14 @@
             <ins title="nlp 2.00">ἐστιν’</ins>
           </span>
         </span>
-        <span id="w_135" class="ocr_word" title="bbox 551 1196 682 1249" lang="grc">
+        <span id="w_135_0" class="ocr_word" title="bbox 551 1196 682 1249">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τοῦτο</ins>
+            <ins class="alt" title="nlp 2.00">(τοῦτο</ins>
+          </span>
+        </span>
+        <span id="w_135_1" class="ocr_word" title="bbox 551 1196 682 1249">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_136" class="ocr_word" title="bbox 715 1208 787 1246" lang="grc">
@@ -766,11 +766,6 @@
         <span id="w_142" class="ocr_word" title="bbox 1772 1187 1982 1241" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Σωκράτης</ins>
-          </span>
-        </span>
-        <span id="w_143" class="ocr_word" title="bbox 2012 1187 2060 1226" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δίκαιός</ins>
           </span>
         </span>
       </span>
@@ -844,7 +839,7 @@
         </span>
         <span id="w_158" class="ocr_word" title="bbox 550 1332 809 1385" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπάρχοντος</ins>
+            <ins title="nlp 2.00">(ὑπάρχοντος</ins>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 841 1342 867 1366" lang="grc">
@@ -1125,9 +1120,14 @@
             <ins class="alt" title="nlp 2.00">ἔστιν’</ins>
           </span>
         </span>
-        <span id="w_218" class="ocr_word" title="bbox 1338 1598 1401 1653">
+        <span id="w_218_0" class="ocr_word" title="bbox 1338 1598 1401 1653">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;τῇ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;τῇ</ins>
+          </span>
+        </span>
+        <span id="w_218_1" class="ocr_word" title="bbox 1338 1598 1401 1653">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1427 1601 1562 1655" lang="grc">
@@ -1145,11 +1145,6 @@
             <ins class="alt" title="nlp 1.00">τῇ</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 1897 1600 2062 1650" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λεγούσῃ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 329 1665 2062 1729">
         <span id="w_223" class="ocr_word" title="bbox 329 1691 372 1721">
@@ -1157,14 +1152,9 @@
             <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
-        <span id="w_224" class="ocr_word" title="bbox 397 1676 406 1691">
-          <span class="alternatives">
-            <ins title="nlp 2.00">‘</ins>
-          </span>
-        </span>
         <span id="w_225" class="ocr_word" title="bbox 419 1676 627 1729" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Σωκράτης</ins>
+            <ins class="alt" title="nlp 2.00">‘Σωκράτης</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 650 1670 779 1715" lang="grc">
@@ -1775,7 +1765,7 @@
         </span>
         <span id="w_348" class="ocr_word" title="bbox 637 2357 645 2371" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἶπάς</ins>
+            <ins title="nlp 2.00">῾πᾶς</ins>
           </span>
         </span>
         <span id="w_349" class="ocr_word" title="bbox 763 2355 967 2396" lang="grc">
@@ -1793,9 +1783,14 @@
             <ins class="alt" title="nlp 1.00">ἔσται,</ins>
           </span>
         </span>
-        <span id="w_352_0" class="ocr_word" title="bbox 1324 2355 1398 2392">
+        <span id="w_352_0_0" class="ocr_word" title="bbox 1324 2355 1398 2392">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">πᾶσ</ins>
+            <ins class="alt" title="nlp 2.00">πᾶς</ins>
+          </span>
+        </span>
+        <span id="w_352_0_1" class="ocr_word" title="bbox 1324 2355 1398 2392">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_352_1" class="ocr_word" title="bbox 1324 2355 1398 2392">
@@ -1811,11 +1806,6 @@
         <span id="w_354" class="ocr_word" title="bbox 1829 2367 1899 2391" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
-          </span>
-        </span>
-        <span id="w_355" class="ocr_word" title="bbox 1919 2349 2025 2391" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἔσται’.</ins>
           </span>
         </span>
       </span>
